add new page data

--- a/modawana.html
+++ b/modawana.html
@@ -13,7 +13,7 @@
 
 <header>
     <div class="header-container">
-        <a href="#" class="logo">  <img src="./images/logo/F5558736-0AB3-4B98-BB24-F35D6E2A232A.png" class="logo-img"></a>
+        <a href="index.html" class="logo">  <img src="./images/logo/F5558736-0AB3-4B98-BB24-F35D6E2A232A.png" class="logo-img"></a>
         <div class="hamburger navigation" id="hamburger" >
                 <a href="index.html#services" >الخدمات</a>
                 <a href="index.html#projects" >المشاريع</a>
@@ -32,7 +32,7 @@
                 <h5 class="card-title">2024 شروط رخصة البناء الجديدة في السعودية</h5>
                 <p class="card-text">تتغير شروط رخصة البناء في السعودية مع الزمن، و2024 جابت لنا تغييرات مهمة. عشان تبدأ بناء مشروعك أو تطوير عقار، لازم تكون ملم بالشروط الجديدة. في هذا المقال، حنغطي أبرز النقاط والامتيازات والنظام الجديد لرخص البناء.</p>
             </div>
-            <a href="http://" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
+            <a href="modawanaData.html" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
             <div class="card-footer">
                 <small class="text-body-secondary">اخر تحديث منذ ٣ دقائق</small>
             </div>
@@ -45,7 +45,7 @@
                 <h5 class="card-title">خطوات إصدار رخصة بناء سكني في السعودية2024 دليل شامل</h5>
                 <p class="card-text">خطوات إصدار رخصة بناء سكني إذا كنت تفكر في بناء منزل جديد أو مشروع سكني في السعودية، فأنت بحاجة لفهم خطوات إصدار رخصة بناء بوضوح. هذه الرخصة تعتبر مفتاحك لبدء المشروع بشكل قانوني وصحيح. في هذا المقال، سنتناول جميع الخطوات اللازمة إصدار رخصة بناء سكني، من التخطيط إلى التسليم، بأسلوب بسيط وسلس.</p>
             </div>
-            <a href="http://" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
+            <a href="modawanaData.html" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
             <div class="card-footer">
                 <small class="text-body-secondary">اخر تحديث منذ ٣ دقائق</small>
             </div>
@@ -58,7 +58,7 @@
                 <h5 class="card-title">2024 أهمية رخصة البناء للتنظيم القانوني في السعودية</h5>
                 <p class="card-text">عندما نتكلم عن البناء في السعودية، رخصة البناء تعتبر مفتاح الأمان والنظام في المشاريع. إذا كنت مهتم في المجال هذا، تعال شوف كيف الرخصة تلعب دور كبير في تنظيم كل شيء.</p>
             </div>
-            <a href="http://" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
+            <a href="modawanaData.html" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
             <div class="card-footer">
                 <small class="text-body-secondary">اخر تحديث منذ ٣ دقائق</small>
             </div>
@@ -71,7 +71,7 @@
                 <h5 class="card-title">مكتب استشارات هندسية سعودي بالرياض 2024: كيف تختار الأنسب </h5>
                 <p class="card-text">في عالم البناء والهندسة، اختيار مكتب استشارات هندسية موثوق وذو خبرة يعتبر خطوة حاسمة لنجاح مشروعك. بالرياض، يتوفر العديد من المكاتب التي تقدم خدمات استشارية متميزة، لكن كيف تختار الأنسب لاحتياجاتك؟ في هذا المقال، سنأخذك في جولة للتعرف على ما يميز المكاتب الاستشارية وكيف يمكنك اتخاذ القرار الصحيح.</p>
             </div>
-            <a href="http://" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
+            <a href="modawanaData.html" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
             <div class="card-footer">
                 <small class="text-body-secondary">اخر تحديث منذ ٣ دقائق</small>
             </div>
@@ -84,7 +84,7 @@
                 <h5 class="card-title">كيف تختار شركة استشارية هندسية مناسبة لمشاريعك؟</h5>
                 <p class="card-text">إذا كنت تفكر في بدء مشروع جديد أو تطوير مشروع قائم، فاختيار الشركة الاستشارية الهندسية المناسبة هو خطوة أساسية. شركة قمة السمو توفر لك كل الدعم والخبرة اللازمة لضمان نجاح مشاريعك. هنا راح نتكلم عن العوامل المهمة اللي لازم تأخذها بعين الاعتبار عند اختيار الشركة الاستشارية الهندسية المناسبة لمشروعك.</p>
             </div>
-            <a href="http://" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
+            <a href="modawanaData.html" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
             <div class="card-footer">
                 <small class="text-body-secondary">اخر تحديث منذ ٣ دقائق</small>
             </div>
@@ -97,7 +97,7 @@
                 <h5 class="card-title">ما هو عمل مكتب استشاري هندسي؟</h5>
                 <p class="card-text">إذا كنت تفكر في بناء مشروع جديد أو تطوير واحد قائم، مكتب استشاري هندسي هو الخطوة الأولى التي تحتاجها. في عالم اليوم، دور مكتب استشاري دهندسي ما عاد مجرد تقديم نصائح فنية، بل صار أساسياً في تنفيذ المشاريع بنجاح واحترافية. هنا نوضح لك أهم المهام اللي يقوم بها مكتب استشاري هندسي وكيف يساهم في إنجاح مشاريعك.</p>
             </div>
-            <a href="http://" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
+            <a href="modawanaData.html" target="_blank" rel="noopener noreferrer">قراءه المزيد</a>
             <div class="card-footer">
                 <small class="text-body-secondary">اخر تحديث منذ ٣ دقائق</small>
             </div>
