update wats logo and slider image num add map

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
             <img src="/images/صور التصميم/1 (17).jpg" alt="صورة 3">
             <div class="caption"></div>
         </div>
+        <div class="slide">
+            <img src="/images/صور التصميم/1 (19).jpg" alt="صورة 3">
+            <div class="caption"></div>
+        </div>
+        <div class="slide">
+            <img src="/images/صور التصميم/1 (20).jpg" alt="صورة 3">
+            <div class="caption"></div>
+        </div>
     </div>
 
 
@@ -263,10 +271,10 @@
 
 <!-- Gallery Modal -->
 <div class="gallery-modal" id="galleryModal">
-  <span class="gallery-close" id="galleryClose">&times;</span>
-  <span class="gallery-arrow gallery-prev" id="galleryPrev">&#10094;</span>
-  <img id="galleryImg" src="">
-  <span class="gallery-arrow gallery-next" id="galleryNext">&#10095;</span>
+    <span class="gallery-close" id="galleryClose">&times;</span>
+    <span class="gallery-arrow gallery-prev" id="galleryPrev">&#10094;</span>
+    <img id="galleryImg" src="">
+    <span class="gallery-arrow gallery-next" id="galleryNext">&#10095;</span>
 </div>
 
 
@@ -302,7 +310,12 @@
 <!-- زر واتساب -->
 <a href="https://wa.me/201234567890" class="whatsapp-float" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+    <span class="whatsapp-text">تواصل مباشر</span>
 </a>
+
+<section class="map">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3629.229795257632!2d46.648192!3d24.5467199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f119c1077f983%3A0xf21ac0dd0d948883!2z2LTYsdmD2Kkg2KfYs9in2YTZitioINin2YTZgdmGINmE2YTYpdiz2KrYtNin2LHYp9iqINin2YTZh9mG2K_Ys9mK2Kk!5e0!3m2!1sar!2seg!4v1756316733024!5m2!1sar!2seg" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
 
 <footer class="footer" id="contactUs">
         <div class="container footer-content">
@@ -360,7 +373,7 @@
         </div>
 
         <div class="footer-bottom">
-        <p data-translate="copyright">© 2025 <a target="_blank" href="https://nasa-website-zeta.vercel.app/">NASA Technology<a/>. All rights reserved.</p>
+        <p data-translate="copyright">جميع الحقوق محفوظة ©️ 2025 شركة أساليب الفن للاستشارات الهندسية</p>
         </div>
 </footer>
 
