--- a/modawanaData.html
+++ b/modawanaData.html
@@ -69,6 +69,7 @@
 <!-- زر واتساب -->
 <a href="https://wa.me/201234567890" class="whatsapp-float" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+    <span class="whatsapp-text">تواصل مباشر</span>
 </a>
 
 
@@ -128,7 +129,7 @@
         </div>
 
         <div class="footer-bottom">
-        <p data-translate="copyright">© 2025 <a target="_blank" href="https://nasa-website-zeta.vercel.app/">NASA Technology<a/>. All rights reserved.</p>
+        <p data-translate="copyright">جميع الحقوق محفوظة ©️ 2025 شركة أساليب الفن للاستشارات الهندسية</p>
         </div>
 </footer>
 
